--- a/genre/pom.xml
+++ b/genre/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>genre</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>genre</name>
-	<description>Movie Genre</description>
+	<description>Movide DB Genre Service</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -27,16 +27,32 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>23</java.version>
+		<maven.compiler.source>23</maven.compiler.source>
+		<maven.compiler.target>23</maven.compiler.target>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -49,11 +65,8 @@
 			<artifactId>hibernate-community-dialects</artifactId>
 			<version>6.6.4.Final</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
 	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -62,4 +75,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
