--- a/genre/src/main/resources/application.properties
+++ b/genre/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=genre
-logging.level.org.springframework.jdbc=DEBUG
+server.port=7001
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+logging.level.org.springframework.jdbc=DEBUG
+
