--- a/genre/src/main/resources/persistence.properties
+++ b/genre/src/main/resources/persistence.properties
@@ -1,4 +1,4 @@
 driverClassName=org.sqlite.JDBC
-url=jdbc:sqlite:/mnt/d/Ubuntu_Home/microservices/movie.sqlite
+url=jdbc:sqlite:D:/Ubuntu_Home/microservices/microservices/movie.sqlite
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 hibernate.show_sql=true
